<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/activity_lista_notas_opcao_linear_layout"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_change_layout_linear"
        android:title="@string/LinearLayout"
        />

    <item
        android:id="@+id/activity_lista_notas_opcao_staggered_layout"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_change_layout_staggered"
        android:title="@string/StaggeredLayout"/>

    <item
        android:id="@+id/activity_lista_notas_feedback"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_feedback"
        android:title="@string/feedback"/>
</menu>