<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.FeedbackActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/activity_feedback_card"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/activity_feedback_imagem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/feedback_banner"
                android:contentDescription="@string/banner" />

            <TextView
                android:id="@+id/activity_feedback_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:drawable/screen_background_dark_transparent"
                android:padding="8dp"
                android:text="@string/deixe_o_seu_feedback"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/activity_feedback_imagem"
                app:layout_constraintStart_toStartOf="@id/activity_feedback_imagem" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_feedback_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/activity_feedback_card"
        app:layout_constraintStart_toStartOf="@+id/activity_feedback_card"
        app:layout_constraintTop_toBottomOf="@+id/activity_feedback_card"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/activity_feedback_input_sugestoes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/activity_feedback_input_email"
        app:layout_constraintStart_toStartOf="@+id/activity_feedback_input_email"
        app:layout_constraintTop_toBottomOf="@+id/activity_feedback_input_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descreva_seu_feedback" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sugestoes"
        android:textSize="14sp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        app:layout_constraintTop_toBottomOf="@id/activity_feedback_input_sugestoes"
        app:layout_constraintStart_toStartOf="@id/activity_feedback_input_sugestoes"
        app:layout_constraintEnd_toEndOf="@id/activity_feedback_input_sugestoes"/>

</androidx.constraintlayout.widget.ConstraintLayout>